[package]
name = "vnotify"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
aws-sdk-s3 = "1"
blake3 = "1"
bytes = "1"
faster-hex = "0.9"
futures = "0.3"
moka = { version = "0.12", features = ["future", "sync"] }
rand = "0.8"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
